coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__request__tests__permission_content_deny_reason_snapshot.snap
---
source: app/tui/src/presentation/request.test.rs
expression: body
---
Allow this operation?

Send a message

Actions:
  1/y · Yes, approve once
  2/s · Yes, allow mcp__slack__send_message for this session
  3/a · Yes, always allow mcp__slack__send_message locally
▸ 4/n · No, deny: wrong channel▏ ◂
↑/↓ Navigate  Enter Select  Type a reason  Enter Submit  Esc Cancel
