coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__request__tests__permission_content_explainer_panel_snapshot.snap
---
source: app/tui/src/presentation/request.test.rs
assertion_line: 1338
expression: body
---
Allow this operation?

Command:
  $ rm -rf /tmp/cache

Directory: /repo

⚠ Deletes cached files

Actions:
▸ 1/y · Yes, approve once ◂
  2/n · No, deny
↑/↓ Navigate  Enter Select  1-2 or Y/N shortcuts  ^r Deny with reason

Risk: HIGH — data loss
This removes the build cache directory.
